--- a/onde-comer.html
+++ b/onde-comer.html
@@ -42,7 +42,7 @@
         <p>Nesta sessão listei, por categoria de comida, alguns estabelecimentos veganos e não veganos, que oferecem opções vegetarianas no cardápio.</p>
         <p>Seja direcionado(a) ao Instagram da loja, ao clicar em cima do nome do estabelecimento.</p>
         <div class="lojas">
-            <h2>Pizza e Calzone!</h2>
+            <h2>Pizza & Calzone!</h2>
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
                 <li><a href="https://www.instagram.com/yognbake?igsh=MWV2OTNleXJ0M2o1Yg==" target="_blank">Yog'n'Bake</a></li>
@@ -63,12 +63,22 @@
             </ul>    
         </div>
         <div class="lojas">
-            <h2>Sushi!</h2>
+            <h2>Sushi & Comida Oriental!</h2>
             <ul>
                 <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li>
                 <li><a href="https://instagram.com/sushi.vibe?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Sushi Vibe</a></li> 
                 <li><a href="https://www.instagram.com/restauranteryori?igsh=eWJlbXFrZWYxdWlv" target="_blank">Ryori</a> (Opção no Iguatemi)</li> 
                 <li><a href="https://instagram.com/chinatownfortaleza?igshid=MWs3aHI3bDg0bThqbw==" target="_blank">Chinatown</a></li>
+                <li><a href="https://www.instagram.com/yakiway?igsh=MXJ5bGViamljNzJtNA==" target="_blank">Yaki Way</a></li>
+                <li><a href="https://www.instagram.com/casaryusushi?igsh=MTk0a3BpMHFtcjlreQ==" target="_blank">Ryu</a></li>
+                <li><a href="https://www.instagram.com/kofuku.br?igsh=bG81cHB4MmY3bWl1" target="_blank">Kofuku</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Poke!</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/bowlifood?igsh=dzNreW03Y29qeTg4" target="_blank">Bowli Food</a></li> 
+                <li><a href="https://www.instagram.com/mahalopoke?igsh=MTZ1aWszZDJidWFqbg==" target="_blank">Mahalo Poke</a> (Opção no Iguatemi e RioMar)</li> 
                 <li><a href="https://www.instagram.com/yakiway?igsh=MXJ5bGViamljNzJtNA==" target="_blank">Yaki Way</a></li>
             </ul>
         </div>
@@ -149,10 +159,12 @@
             </ul>
         </div>
         <div class="lojas">
-            <h2>Sanduíche!</h2>
+            <h2>Sanduíche & Wrap!</h2>
             <ul>
                 <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA==" target="_blank">Ventana</a></li>
                 <li><a href="https://www.instagram.com/subwaybrasil?igsh=MXVsMGdidjdieTdlNw==" target="_blank">Subway</a> (Tem em vários shoppings)</li>   
+                <li><a href="https://www.instagram.com/restaurante_vitae?igsh=emVtd2s1Mjh2dXht">Vitaê</a></li>
+                <li><a href="https://www.instagram.com/maju_comidasaudavel?igsh=MWlsa3kweTVidnozaw==">Maju</a></li>
             </ul>
         </div>
         <div class="lojas">
