--- a/dicas.html
+++ b/dicas.html
@@ -41,7 +41,7 @@
     <main>
         <p>Seja direcionado ao Instagram, ao clicar em cima dos nomes dos estabelecimentos.</p>
         <div class="lojas">
-            <h2>Orgânicos e Agroecologia</h2>
+            <h2>Orgânicos & Agroecologia</h2>
             <ul>
                 <li><a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Agroecológica do Benfica</a></li>
                 <li><a href="https://instagram.com/redeecoceara?igshid=MzRlODBiNWFlZA==" target="_blank">Rede EcoCeará</a></li>
@@ -64,7 +64,7 @@
             </ul>
         </div>
         <div class="lojas">
-            <h2>Antepastos e Geleias</h2>
+            <h2>Antepastos & Geleias</h2>
             <ul>
                 <li><a href="https://instagram.com/lila.natural?igshid=MzRlODBiNWFlZA==" target="_blank">Lila</a></li>
                 <li><a href="https://www.instagram.com/natuleia_?igshid=YTQwZjQ0NmI0OA==" target="_blank">Natuleia</a></li>
