--- a/dicas.html
+++ b/dicas.html
@@ -73,7 +73,7 @@
             </ul>
         </div>
         <div class="lojas">
-            <h2>Pousadas e opções veganas em outros municípios cearenses</h2>
+            <h2>Pousadas & Opções Veganas em Outros Municípios Cearenses</h2>
             <ul>
                 <li><a href="https://www.instagram.com/itacupa_vegan_center?igsh=ZTBxNDd2Y2h3bGR3" target="_blank">Pousada Itacupa</a> (Tabuba)</li>
                 <li><a href="https://www.instagram.com/jardimdovento?igsh=MXQ4ZDdxODY3cXlyaA==" target="_blank">Hotel Jardim do Vento</a> (Icaraí de Amontada)</li>  
