--- a/cafes.html
+++ b/cafes.html
@@ -88,6 +88,18 @@
             <p>Clique <a href="https://instagram.com/blempadaria.iguatemifortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Atelier 1913</h3>
+            <p>Drinks de café veganos e comidinhas.</p>
+            <p>Endereço: Rua Antônio Augusto, 744 - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Torra</h3>
+            <p>Cappuccino, chás variados e uma opção de bruschetta.</p>
+            <p>Endereço: Rua Marcos Macêdo, 827 - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/amotorracafe?igsh=OTQxc3pwdzRwcWpi" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Dengo</h3>
             <p>Chocolate quente, cappuccino e chocolate em barra.</p>
             <p>Endereço: Shopping Iguatemi.</p>
