--- a/onde-comer.html
+++ b/onde-comer.html
@@ -161,6 +161,7 @@
         <div class="lojas">
             <h2>Sanduíche & Wrap!</h2>
             <ul>
+                <li><a href="https://www.instagram.com/cozinha.lamarca?igsh=bHQ0d2hlMWR2OTln" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA==" target="_blank">Ventana</a></li>
                 <li><a href="https://www.instagram.com/subwaybrasil?igsh=MXVsMGdidjdieTdlNw==" target="_blank">Subway</a> (Tem em vários shoppings)</li>   
                 <li><a href="https://www.instagram.com/restaurante_vitae?igsh=emVtd2s1Mjh2dXht">Vitaê</a></li>
@@ -172,6 +173,7 @@
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Haed</a></li>
+                <li><a href="https://www.instagram.com/cozinha.lamarca?igsh=bHQ0d2hlMWR2OTln" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
                 <li><a href="https://instagram.com/verduracozinha?igshid=YTQwZjQ0NmI0OA==" target="_blank">Verdura Cozinha</a></li>
                 <li><a href="https://instagram.com/cravoecanelagastrobar?igshid=MzRlODBiNWFlZA==">Cravo & Canela Gastrobar</a> (Opção no Mercado dos Pinhões)</li>
@@ -209,6 +211,8 @@
         <div class="lojas">
             <h2>Salada!</h2>
             <ul>
+                <li><a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">Atelier 1913</a></li>
+                <li><a href="https://www.instagram.com/cozinha.lamarca?igsh=bHQ0d2hlMWR2OTln" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
                 <li><a href="https://instagram.com/saladeria?igshid=YTQwZjQ0NmI0OA==" target="_blank">Saladeria</a></li>
                 <li><a href="https://www.instagram.com/sooveggiebr?igsh=MWtnaGUyZHl6NDBo">SooVeggie</a></li> 
