--- a/onde-comer.html
+++ b/onde-comer.html
@@ -103,6 +103,7 @@
             <h2>Massa!</h2>
             <ul>
                 <li><a href="https://www.instagram.com/casulogastrobar?igsh=MWw2d2ZkN2R2YWJiYw==" target="_blank">Casulo</a></li>
+                <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
                 <li><a href="https://instagram.com/cozinhamamma_lu?igshid=MzRlODBiNWFlZA==" target="_blank">Cozinha da Mamma Lu</a></li>
                 <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>
@@ -163,6 +164,7 @@
             <ul>
                 <li><a href="https://www.instagram.com/cozinha.lamarca?igsh=bHQ0d2hlMWR2OTln" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA==" target="_blank">Ventana</a></li>
+                <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
                 <li><a href="https://www.instagram.com/subwaybrasil?igsh=MXVsMGdidjdieTdlNw==" target="_blank">Subway</a> (Tem em vários shoppings)</li>   
                 <li><a href="https://www.instagram.com/restaurante_vitae?igsh=emVtd2s1Mjh2dXht">Vitaê</a></li>
                 <li><a href="https://www.instagram.com/maju_comidasaudavel?igsh=MWlsa3kweTVidnozaw==">Maju</a></li>
@@ -220,6 +222,16 @@
                 <li><a href="https://instagram.com/sevensalads.ce?igshid=YTQwZjQ0NmI0OA==">Seven Salads</a></li>
                 <li><a href="https://www.instagram.com/restaurante_vitae?igsh=emVtd2s1Mjh2dXht">Vitaê</a></li>
                 <li><a href="https://www.instagram.com/soulfitjuicebar?igsh=MWprOWhlOHZ6NGdhZw==">Soul Fit Juice Bar</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Bruschetta!</h2>
+            <ul>
+                <li><a href="https://instagram.com/paineartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">Pâine</a></li>
+                <li><a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">Atelier 1913</a></li>
+                <li><a href="https://www.instagram.com/cozinha.lamarca?igsh=bHQ0d2hlMWR2OTln" target="_blank">Cozinha Lamarca</a></li>
+                <li><a href="https://www.instagram.com/amotorracafe?igsh=OTQxc3pwdzRwcWpi">Torra</a></li>
+                <li><a href="https://www.instagram.com/lapastagiallafortaleza?igsh=cWd5OGM5OGR1b240" target="_blank">La Pasta Gialla</a></li>
             </ul>
         </div>
         <div class="lojas">
