--- a/onde-comer.html
+++ b/onde-comer.html
@@ -197,9 +197,10 @@
         <div class="lojas">
             <h2>Moqueca!</h2>
             <ul>
-                <li><a href="https://instagram.com/cozinha.lamarca?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cozinha Lamarca</a></li>
-                <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li> 
                 <li><a href="https://www.instagram.com/barracacabumba?igsh=NWZnY3ZnbmR5MnUy" target="_blank">Barraca Cabumba</a> (Opção na Praia do Futuro)</li>
+                <li><a href="https://instagram.com/cozinha.lamarca?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cozinha Lamarca</a></li>
+                <li><a href="https://www.instagram.com/raizcozinhabrasileira?igsh=MXQzbWplazhzbzk1bg==" target="_blank">Raiz</a></li>
+                <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li> 
                 <li><a href="https://instagram.com/paris6fortaleza_oficial?igshid=YTQwZjQ0NmI0OA==">Paris 6</a></li>
             </ul>
         </div>
