--- a/onde-comer.html
+++ b/onde-comer.html
@@ -59,7 +59,9 @@
                 <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio's Napoletan</a></li>
                 <li><a href="https://instagram.com/ilcapopizza?igshid=MzRlODBiNWFlZA==" target="_blank">Il Capo</a></li>
                 <li><a href="https://www.instagram.com/mattarellopizza?igsh=MXJ5ZTVyZjhiYTcxNQ==" target="_blank">Mattarello Pizza</a></li>
+                <li><a href="https://www.instagram.com/aziladosoficial?igsh=MTcyem5pbDVtMDY1bA==" target="_blank">Azilados</a></li>
                 <li><a href="https://www.instagram.com/minikalzone?igsh=cHBoZXU4ZXoyazRr" target="_blank">Mini Kalzone</a> (Tem em vários shoppings)</li>
+
             </ul>    
         </div>
         <div class="lojas">
@@ -200,7 +202,8 @@
                 <li><a href="https://www.instagram.com/barracacabumba?igsh=NWZnY3ZnbmR5MnUy" target="_blank">Barraca Cabumba</a> (Opção na Praia do Futuro)</li>
                 <li><a href="https://instagram.com/cozinha.lamarca?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://www.instagram.com/raizcozinhabrasileira?igsh=MXQzbWplazhzbzk1bg==" target="_blank">Raiz</a></li>
-                <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li> 
+                <li><a href="https://www.instagram.com/mardelimarestaurante?igsh=MTdyeWRnazl4cGt3bw==">Mar de Lima</a></li> 
+                <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li>
                 <li><a href="https://instagram.com/paris6fortaleza_oficial?igshid=YTQwZjQ0NmI0OA==">Paris 6</a></li>
             </ul>
         </div>
