--- a/onde-comer.html
+++ b/onde-comer.html
@@ -203,8 +203,18 @@
                 <li><a href="https://instagram.com/cozinha.lamarca?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://www.instagram.com/raizcozinhabrasileira?igsh=MXQzbWplazhzbzk1bg==" target="_blank">Raiz</a></li>
                 <li><a href="https://www.instagram.com/mardelimarestaurante?igsh=MTdyeWRnazl4cGt3bw==">Mar de Lima</a></li> 
+                <li><a href="https://www.instagram.com/obrutaflor?igsh=MWR0M3lsZHFoMG5saw==">Bruta Flor</a></li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li>
                 <li><a href="https://instagram.com/paris6fortaleza_oficial?igshid=YTQwZjQ0NmI0OA==">Paris 6</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Risoto!</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">Atelier 1913</a></li>
+                <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
+                <li><a href="https://www.instagram.com/hortalicia?igsh=ZTJsNXFtNWd2OXdr" target="_blank">Hortalícia</a></li> 
+                <li><a href="https://www.instagram.com/obrutaflor?igsh=MWR0M3lsZHFoMG5saw==">Bruta Flor</a></li>
             </ul>
         </div>
         <div class="lojas">
