--- a/onde-comer.html
+++ b/onde-comer.html
@@ -59,7 +59,7 @@
                 <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio's Napoletan</a></li>
                 <li><a href="https://instagram.com/ilcapopizza?igshid=MzRlODBiNWFlZA==" target="_blank">Il Capo</a></li>
                 <li><a href="https://www.instagram.com/mattarellopizza?igsh=MXJ5ZTVyZjhiYTcxNQ==" target="_blank">Mattarello Pizza</a></li>
-                <li><a href="https://www.instagram.com/aziladosoficial?igsh=MTcyem5pbDVtMDY1bA==" target="_blank">Azilados</a></li>
+                <li><a href="https://www.instagram.com/emnomedapizza?igsh=bjk5b2U4bzYyZnhw" target="_blank">Em Nome da Pizza</a></li>
                 <li><a href="https://www.instagram.com/minikalzone?igsh=cHBoZXU4ZXoyazRr" target="_blank">Mini Kalzone</a> (Tem em vários shoppings)</li>
 
             </ul>    
@@ -215,6 +215,8 @@
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
                 <li><a href="https://www.instagram.com/hortalicia?igsh=ZTJsNXFtNWd2OXdr" target="_blank">Hortalícia</a></li> 
                 <li><a href="https://www.instagram.com/obrutaflor?igsh=MWR0M3lsZHFoMG5saw==">Bruta Flor</a></li>
+                <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>
+                <li><a href="https://www.instagram.com/joa.ristobar?igsh=cDc5NHlhbGl4dnBl" target="_blank">Joá</a></li>
             </ul>
         </div>
         <div class="lojas">
