--- a/restaurantes.html
+++ b/restaurantes.html
@@ -83,7 +83,7 @@
         <div class="lojas">
             <h3>Malaguetta</h3>
             <p>Almoço.</p>
-            <p>Endereço: Rua João Gentil, 241, Benfica - Fortaleza</p>
+            <p>Endereço: Rua Instituto do Ceará, 140, Benfica - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
