--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2>Guia vegano de Fortaleza</h2>
             </div>
         </div>
-        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu<span>MENU</span></i>
         <menu id="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
