--- a/canais.html
+++ b/canais.html
@@ -52,6 +52,7 @@
                 <li><a href="https://www.youtube.com/@RoleDeVegano" target="_blank">Rolê de Vegano</a></li>
                 <li><a href="https://www.youtube.com/@vegcomcarinho" target="_blank">Veg Com Carinho</a></li>
                 <li><a href="https://www.youtube.com/@VIEWGANAS" target="_blank">Viewganas</a></li>
+                <li><a href="https://youtube.com/@naoesoalface?si=aIvbzj67tMLUa7W2" target="_blank">Não É Só Alface</a></li>
                 <li><a href="https://www.youtube.com/@VeganBlackMetalChef" target="_blank">Vegan Black Metal Chef</a></li>
                 <li><a href="https://www.youtube.com/@vegetarirango" target="_blank">VegetariRango</a></li>
                 
