--- a/dicas.html
+++ b/dicas.html
@@ -81,6 +81,7 @@
                 <li><a href="https://www.instagram.com/flechadamata/" target="_blank">Eco Aldeia Flecha da Mata</a> (Aracati)</li>
                 <li><a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sítio do Vale da Biodiversidade</a> (Mulungu)</li>
                 <li><a href="https://www.instagram.com/benzida_?igsh=MXg3Z2llYm45bDN2Zw==" target="_blank">Benzida</a> (Icaraí de Amontada)</li>
+                <li><a href="https://www.instagram.com/allmassas?igsh=dXZrcDA4eDIyM2hy" target="_blank">All Massas</a> (Aquiraz)</li>
             </ul>
         </div>
         <div class="lojas">
