--- a/emporios.html
+++ b/emporios.html
@@ -62,6 +62,10 @@
             <h3>Holos Poder de Nutrir</h3>
             <p>Clique <a href="https://www.instagram.com/holospoderdenutrir?igsh=emVvaHp1OGxiMGtt" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Veg Inclui</h3>
+            <p>Clique <a href="https://www.instagram.com/veginclui?igsh=MWJ5OGdoaHoxMjZsbQ==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
