Update onde-comer and index

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p>Desenvolvido por Flávia Reis.</p>
         <p>Contato: flaviarster@gmail.com</p>
         <p>Fortaleza, Ceará.</p>
-        <p>Última atualização: Março/2024.</p>
+        <p>Última atualização: Abril/2024.</p>
     </footer>
 </body>
 </html>
