--- a/onde-comer.html
+++ b/onde-comer.html
@@ -60,6 +60,7 @@
                 <li><a href="https://instagram.com/ilcapopizza?igshid=MzRlODBiNWFlZA==" target="_blank">Il Capo</a></li>
                 <li><a href="https://www.instagram.com/mattarellopizza?igsh=MXJ5ZTVyZjhiYTcxNQ==" target="_blank">Mattarello Pizza</a></li>
                 <li><a href="https://www.instagram.com/emnomedapizza?igsh=bjk5b2U4bzYyZnhw" target="_blank">Em Nome da Pizza</a></li>
+                <li><a href="https://www.instagram.com/unapastaoficial?igsh=MTBnOTFldXg0MDR4cA==" target="_blank">Una Pasta</a></li>
                 <li><a href="https://www.instagram.com/minikalzone?igsh=cHBoZXU4ZXoyazRr" target="_blank">Mini Kalzone</a> (Tem em vários shoppings)</li>
 
             </ul>    
