--- a/dicas.html
+++ b/dicas.html
@@ -100,6 +100,7 @@
                 <li><a href="https://instagram.com/lucasnutriveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">Lucas Martins</a></li> 
                 <li><a href="https://instagram.com/carolinaararipe.nutri?igshid=YTQwZjQ0NmI0OA==" target="_blank">Carolina Araripe</a></li> 
                 <li><a href="https://instagram.com/abvelloso?igshid=YTQwZjQ0NmI0OA==" target="_blank">Ana Beatriz Velloso</a></li> 
+                <li><a href="https://www.instagram.com/dayannagiffonenutri?igsh=bmowazI1MzBld3g1" target="_blank">Dayanna Giffone</a></li> 
             </ul>
         </div>
         <div class="lojas">
