--- a/onde-comer.html
+++ b/onde-comer.html
@@ -114,6 +114,7 @@
                 <li><a href="https://instagram.com/nomarderosas?igshid=YTQwZjQ0NmI0OA==" target="_blank">Mar de Rosas</a></li> 
                 <li><a href="https://www.instagram.com/raizcozinhabrasileira?igsh=MXQzbWplazhzbzk1bg==" target="_blank">Raiz</a></li>
                 <li><a href="https://www.instagram.com/massadocheff_delivery?igsh=MTZ6MnBnNmk2azVrMw==" target="_blank">Massa do Cheff</a></li>
+                <li><a href="https://www.instagram.com/cafeteriaclubcafe?igsh=MW0zaWx5YjZjYTFwOQ==" target="_blank">Club Café</a> (Iguatemi, RioMar e aeroporto)</li>
                 <li><a href="https://www.instagram.com/spoleto_oficial?igsh=ZTl4NWl5a29vNnFu" target="_blank">Spoleto</a> (Tem em vários shoppings)</li>
             </ul>
         </div>
@@ -234,6 +235,7 @@
             <ul>
                 <li><a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">Atelier 1913</a></li>
                 <li><a href="https://www.instagram.com/cozinha.lamarca?igsh=bHQ0d2hlMWR2OTln" target="_blank">Cozinha Lamarca</a></li>
+                <li><a href="https://www.instagram.com/cacao.fresh?igsh=c28xc2Q5Zmkxb2tt">Cacao Fresh</a>(Opção no Iguatemi)</li>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
                 <li><a href="https://instagram.com/saladeria?igshid=YTQwZjQ0NmI0OA==" target="_blank">Saladeria</a></li>
                 <li><a href="https://www.instagram.com/sooveggiebr?igsh=MWtnaGUyZHl6NDBo">SooVeggie</a></li> 
