Update dicas e cafés

--- a/cafes.html
+++ b/cafes.html
@@ -82,8 +82,13 @@
             <p>Clique <a href="https://instagram.com/blempadaria.iguatemifortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Go Coffee</h3>
+            <p>Opção de substituição do leite animal por leite vegetal.</p>
+            <p>Clique <a href="https://www.instagram.com/gocoffeebrasil?igsh=eXVvcGV0OTl5dnlm" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Atelier 1913</h3>
-            <p>Drinks de café veganos e comidinhas.</p>
+            <p>Opção de substituição do leite animal por leite vegetal.</p>
             <p>Endereço: Rua Antônio Augusto, 744 - Fortaleza</p>
             <p>Clique <a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
