--- a/dicas.html
+++ b/dicas.html
@@ -104,6 +104,12 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Alimentação Viva</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/zevivozetox?igsh=dXFodDZtZm44Nzc4" target="_blank">Zetox</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Padarias</h2>
             <h3>Padarias com opções veganas no cardápio.</h3>
             <ul>
