--- a/onde-comer.html
+++ b/onde-comer.html
@@ -208,6 +208,7 @@
                 <li><a href="https://www.instagram.com/obrutaflor?igsh=MWR0M3lsZHFoMG5saw==">Bruta Flor</a></li>
                 <li><a href="https://www.instagram.com/piteucasacriativa?igsh=MXVycG81OW0xa3o3Zw==">Pitéu</a></li>
                 <li><a href="https://www.instagram.com/lavieverdesaudavel?igsh=c2NhMTZzZ2RnYjZn">La Vie Verde</a></li>
+                <li><a href="https://www.instagram.com/panelinhasfortalezace?igsh=Z2hmYWY2bTluOGp1">Panelinhas do Brasil</a> (Opção no Del Paseo)</li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li>
                 <li><a href="https://instagram.com/paris6fortaleza_oficial?igshid=YTQwZjQ0NmI0OA==">Paris 6</a></li>
             </ul>
