--- a/onde-comer.html
+++ b/onde-comer.html
@@ -227,7 +227,14 @@
             <h2>Feijoada!</h2>
             <ul>
                 <li><a href="https://www.instagram.com/barracacabumba?igsh=NWZnY3ZnbmR5MnUy" target="_blank">Barraca Cabumba</a> (Opção na Praia do Futuro)</li>
+                <li><a href="https://instagram.com/casapatua?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Patuá</a></li>
                 <li><a href="https://instagram.com/forneriadapraia?igshid=YTQwZjQ0NmI0OA==">Forneria da Praia</a></li> 
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Batata Recheada!</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/potzpotato?igsh=MThkbjl6azJ5ZXJuNA==">Potz</a></li> 
             </ul>
         </div>
         <div class="lojas">
