--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -96,6 +96,12 @@
             <p>Clique <a href="https://www.instagram.com/produtos.naturalis?igsh=b2k0MzY3eWNtc2Jk" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <br>
+        <h1 class="titulos-categorias">Salões de Beleza</h1>
+        <div class="lojas">
+            <h3>Renata Andrade Beauty</h3>
+            <p>Clique <a href="https://www.instagram.com/randradebeauty?igsh=MWs3b2E0cWd6NTM1Mg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <br>
         <h1 class="titulos-categorias">Produtos de Limpeza</h1>
         <div class="lojas">
             <h3>HK Eco</h3>
