--- a/queijos.html
+++ b/queijos.html
@@ -46,6 +46,11 @@
             <p>Delivery</p>
             <p>Clique <a href="https://instagram.com/b.e.n.queijosveganos?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Eva Verde</h3>
+            <p>Tofu.</p>
+            <p>Clique <a href="https://www.instagram.com/evaverdefor?igsh=MTZkbzZiazVzemlkNg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
