--- a/cafes.html
+++ b/cafes.html
@@ -87,12 +87,6 @@
             <p>Clique <a href="https://www.instagram.com/gocoffeebrasil?igsh=eXVvcGV0OTl5dnlm" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
-            <h3>Atelier 1913</h3>
-            <p>Opção de substituição do leite animal por leite vegetal.</p>
-            <p>Endereço: Rua Antônio Augusto, 744 - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
             <h3>Torra</h3>
             <p>Cappuccino, chás variados e uma opção de bruschetta.</p>
             <p>Endereço: Rua Marcos Macêdo, 827 - Fortaleza</p>
@@ -103,6 +97,18 @@
             <p>Chocolate quente, cappuccino e chocolate em barra.</p>
             <p>Endereço: Shopping Iguatemi.</p>
             <p>Clique <a href="https://www.instagram.com/dengochocolates?igsh=MWlmazd5Z3ljNm83Mw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Keopi</h3>
+            <p>Algumas opções de lanche vegano.</p>
+            <p>Endereço: Avenida Deputado Oswaldo Studart, 370 - Bairro de Fátima.</p>
+            <p>Clique <a href="https://www.instagram.com/_keopi_cafeteria?igsh=ZmlmdHk3dDh5aGc5" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Atelier 1913</h3>
+            <p>Opção de substituição do leite animal por leite vegetal.</p>
+            <p>Endereço: Rua Antônio Augusto, 744 - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
     </main>
     
