--- a/cafes.html
+++ b/cafes.html
@@ -100,7 +100,7 @@
         </div>
         <div class="lojas">
             <h3>Keopi</h3>
-            <p>Algumas opções de lanche vegano.</p>
+            <p>Algumas opções de lanche vegano e opção de leite vegetal.</p>
             <p>Endereço: Avenida Deputado Oswaldo Studart, 370 - Bairro de Fátima.</p>
             <p>Clique <a href="https://www.instagram.com/_keopi_cafeteria?igsh=ZmlmdHk3dDh5aGc5" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
