--- a/onde-comer.html
+++ b/onde-comer.html
@@ -83,6 +83,7 @@
                 <li><a href="https://www.instagram.com/bowlifood?igsh=dzNreW03Y29qeTg4" target="_blank">Bowli Food</a></li> 
                 <li><a href="https://www.instagram.com/mahalopoke?igsh=MTZ1aWszZDJidWFqbg==" target="_blank">Mahalo Poke</a> (Opção no Iguatemi e RioMar)</li> 
                 <li><a href="https://www.instagram.com/yakiway?igsh=MXJ5bGViamljNzJtNA==" target="_blank">Yaki Way</a></li>
+                <li><a href="https://www.instagram.com/hapoke.ce?igsh=aGdjOWk0bWQ4NzRq" target="_blank">Hapoke</a></li>
             </ul>
         </div>
         <div class="lojas">
