--- a/onde-comer.html
+++ b/onde-comer.html
@@ -75,6 +75,7 @@
                 <li><a href="https://www.instagram.com/yakiway?igsh=MXJ5bGViamljNzJtNA==" target="_blank">Yaki Way</a></li>
                 <li><a href="https://www.instagram.com/casaryusushi?igsh=MTk0a3BpMHFtcjlreQ==" target="_blank">Ryu</a></li>
                 <li><a href="https://www.instagram.com/kofuku.br?igsh=bG81cHB4MmY3bWl1" target="_blank">Kofuku</a></li>
+                <li><a href="https://www.instagram.com/kbab.fortaleza?igsh=aDQ1YTFqNXZmbWt6" target="_blank">K-Bab</a></li>
             </ul>
         </div>
         <div class="lojas">
