--- a/onde-comer.html
+++ b/onde-comer.html
@@ -91,8 +91,9 @@
             <h2>Not dog!</h2>
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
-                <li><a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">Café Cultive</a></li>
+                <li><a href="https://www.instagram.com/empadaria_da_vovo_?igsh=NjY2ZzBtejZrbXk0" target="_blank">Empadaria da Vovó</a></li>
                 <li><a href="https://www.instagram.com/heyjoefoodnbar?igsh=MXZkdmc3c3pnajE3OA==" target="_blank">Hey Joe</a></li>
+                <li><a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">Café Cultive</a></li>
             </ul>
         </div>
         <div class="lojas">
@@ -135,6 +136,7 @@
                 <li><a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">Rango Verde</a></li>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
                 <li><a href="https://instagram.com/lifecoxinharia?igshid=MzRlODBiNWFlZA==" target="_blank">Life Coxinharia</a></li> 
+                <li><a href="https://www.instagram.com/empadaria_da_vovo_?igsh=NjY2ZzBtejZrbXk0" target="_blank">Empadaria da Vovó</a></li>
                 <li><a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">Dorear</a></li>
                 <li><a href="https://www.instagram.com/amordecafe_?igsh=bnBidTB2MDEyejdt" target="_blank">Amor de Café</a></li>  
                 <li><a href="https://www.instagram.com/sucrebrasil?igsh=dHYzNmVsc3J0NGNi" target="_blank">Sucré</a></li>
@@ -210,6 +212,7 @@
                 <li><a href="https://www.instagram.com/lavieverdesaudavel?igsh=c2NhMTZzZ2RnYjZn">La Vie Verde</a></li>
                 <li><a href="https://www.instagram.com/panelinhasfortalezace?igsh=Z2hmYWY2bTluOGp1">Panelinhas do Brasil</a> (Opção no Del Paseo)</li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li>
+                <li><a href="https://www.instagram.com/empadaria_da_vovo_?igsh=NjY2ZzBtejZrbXk0" target="_blank">Empadaria da Vovó</a></li>
                 <li><a href="https://instagram.com/paris6fortaleza_oficial?igshid=YTQwZjQ0NmI0OA==">Paris 6</a></li>
             </ul>
         </div>
