--- a/onde-comer.html
+++ b/onde-comer.html
@@ -146,10 +146,11 @@
             <h2>Acarajé!</h2>
             <ul>
                 <li><a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==">Malaguetta</a></li>
-                <li><a href="https://instagram.com/acarajedamanu?igshid=MzRlODBiNWFlZA==">Acarajé da Manu</a></li>
+                <li><a href="https://instagram.com/acarajedamanu?igshid=MzRlODBiNWFlZA==">Acarajé da Manu</a> (Opção na Beira Mar)</li>
                 <li><a href="https://instagram.com/acaraje_e_cia?igshid=MzRlODBiNWFlZA==">Acarajé & Cia</a></li>   
                 <li><a href="https://www.instagram.com/cozinhadoacaraje?igsh=bWNzN3o3N2h3enY5">Cozinha do Acarajé</a></li>   
-                <li><a href="https://instagram.com/acaraje_da_adriana?igshid=MzRlODBiNWFlZA==" target="_blank">Acarajé da Adriana</a> (Opção na Beira Mar)</li>
+                <li><a href="https://instagram.com/acaraje_da_adriana?igshid=MzRlODBiNWFlZA==" target="_blank">Acarajé da Adriana</a></li>
+                <li><a href="https://www.instagram.com/empadaria_da_vovo_?igsh=NjY2ZzBtejZrbXk0" target="_blank">Empadaria da Vovó</a></li>
             </ul>
         </div>
         <div class="lojas">
