--- a/cafes.html
+++ b/cafes.html
@@ -105,6 +105,12 @@
             <p>Clique <a href="https://www.instagram.com/_keopi_cafeteria?igsh=ZmlmdHk3dDh5aGc5" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Tea Shop</h3>
+            <p>Cappuccino e grande variedade de chás.</p>
+            <p>Endereço: Shopping RioMar - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/teashop_riomarfortaleza?igsh=Ym5hYTFvcmxneThs" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Atelier 1913</h3>
             <p>Opção de substituição do leite animal por leite vegetal.</p>
             <p>Endereço: Rua Antônio Augusto, 744 - Fortaleza</p>
