--- a/cafes.html
+++ b/cafes.html
@@ -112,7 +112,7 @@
         </div>
         <div class="Jardins Gourmet">
             <h3>Atelier 1913</h3>
-            <p>Cappuccino e outros drinks de café. Algumas opções de comida.</p>
+            <p>Cappuccino e outros drinks de café. Algumas opções de comidas doces e salagdas.</p>
             <p>Endereço: Rua Jaime Calado, 130 - Bairro de Fátima - Fortaleza</p>
             <p>Clique <a href="https://www.instagram.com/jardins_gourmet?igsh=MTAzbWcwZGUzeHlkaQ==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
