--- a/onde-comer.html
+++ b/onde-comer.html
@@ -119,6 +119,8 @@
                 <li><a href="https://www.instagram.com/massadocheff_delivery?igsh=MTZ6MnBnNmk2azVrMw==" target="_blank">Massa do Cheff</a></li>
                 <li><a href="https://www.instagram.com/cafeteriaclubcafe?igsh=MW0zaWx5YjZjYTFwOQ==" target="_blank">Club Café</a> (Iguatemi, RioMar e aeroporto)</li>
                 <li><a href="https://www.instagram.com/spoleto_oficial?igsh=ZTl4NWl5a29vNnFu" target="_blank">Spoleto</a> (Tem em vários shoppings)</li>
+                <li><a href="https://www.instagram.com/cocobambuoficial?igsh=eTY5OXg2aTc1Zmpi" target="_blank">Coco Bambu</a></li>
+
             </ul>
         </div>
         <div class="lojas">
@@ -220,6 +222,7 @@
         <div class="lojas">
             <h2>Risoto!</h2>
             <ul>
+                <li><a href="https://www.instagram.com/cocobambuoficial?igsh=eTY5OXg2aTc1Zmpi" target="_blank">Coco Bambu</a></li>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
                 <li><a href="https://www.instagram.com/hortalicia?igsh=ZTJsNXFtNWd2OXdr" target="_blank">Hortalícia</a></li> 
                 <li><a href="https://www.instagram.com/obrutaflor?igsh=MWR0M3lsZHFoMG5saw==">Bruta Flor</a></li>
