--- a/cafes.html
+++ b/cafes.html
@@ -110,8 +110,8 @@
             <p>Endereço: Shopping RioMar - Fortaleza</p>
             <p>Clique <a href="https://www.instagram.com/teashop_riomarfortaleza?igsh=Ym5hYTFvcmxneThs" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
-        <div class="Jardins Gourmet">
-            <h3>Atelier 1913</h3>
+        <div class="lojas">
+            <h3>Jardins Gourmet</h3>
             <p>Cappuccino e outros drinks de café. Algumas opções de comidas doces e salagdas.</p>
             <p>Endereço: Rua Jaime Calado, 130 - Bairro de Fátima - Fortaleza</p>
             <p>Clique <a href="https://www.instagram.com/jardins_gourmet?igsh=MTAzbWcwZGUzeHlkaQ==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
