--- a/canais.html
+++ b/canais.html
@@ -53,6 +53,7 @@
                 <li><a href="https://www.youtube.com/@vegcomcarinho" target="_blank">Veg Com Carinho</a></li>
                 <li><a href="https://www.youtube.com/@VIEWGANAS" target="_blank">Viewganas</a></li>
                 <li><a href="https://youtube.com/@naoesoalface?si=aIvbzj67tMLUa7W2" target="_blank">Não É Só Alface</a></li>
+                <li><a href="https://youtube.com/@veganizai1691?si=uCFkgp3ac7_TAraH" target="_blank">VeganizAí</a></li>
                 <li><a href="https://www.youtube.com/@VeganBlackMetalChef" target="_blank">Vegan Black Metal Chef</a></li>
                 <li><a href="https://www.youtube.com/@vegetarirango" target="_blank">VegetariRango</a></li>
                 
