--- a/dicas.html
+++ b/dicas.html
@@ -102,6 +102,7 @@
                 <li><a href="https://instagram.com/carolinaararipe.nutri?igshid=YTQwZjQ0NmI0OA==" target="_blank">Carolina Araripe</a></li> 
                 <li><a href="https://instagram.com/abvelloso?igshid=YTQwZjQ0NmI0OA==" target="_blank">Ana Beatriz Velloso</a></li> 
                 <li><a href="https://www.instagram.com/dayannagiffonenutri?igsh=bmowazI1MzBld3g1" target="_blank">Dayanna Giffone</a></li> 
+                <li><a href="https://www.instagram.com/vegvih?igsh=MXd0dWUzZmwwbDcydQ==" target="_blank">Virginia Albuquerque</a></li> 
             </ul>
         </div>
         <div class="lojas">
