--- a/confeitarias.html
+++ b/confeitarias.html
@@ -86,6 +86,10 @@
             <h3>Opa! Doces Veganos</h3>
             <p>Clique <a href="https://www.instagram.com/opadocesveganos?igsh=MWJmMnUxNGt6a2J6Yg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Meraki</h3>
+            <p>Clique <a href="https://www.instagram.com/sigameraki?igsh=MXI0YjY4NG9qZGJ2Yw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
