--- a/cafes.html
+++ b/cafes.html
@@ -59,7 +59,7 @@
         </div>
         <div class="lojas">
             <h3>Café Cultive</h3>
-            <p>Boa carta de chás e algumas opções de comida vegana no cardápio.</p>
+            <p>Boa carta de chás.</p>
             <p>Endereço: Rua Maria Tomásia, 1276 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
