--- a/canais.html
+++ b/canais.html
@@ -51,6 +51,7 @@
                 <li><a href="https://www.youtube.com/@TNMVEGG" target="_blank">Tá na Mesa Vegg</a></li>
                 <li><a href="https://www.youtube.com/@RoleDeVegano" target="_blank">Rolê de Vegano</a></li>
                 <li><a href="https://www.youtube.com/@vegcomcarinho" target="_blank">Veg Com Carinho</a></li>
+                <li><a href="https://youtube.com/@aquela.vegana?si=MRgaggUSxq_nrUoi" target="_blank">Aquele Canal</a></li>
                 <li><a href="https://www.youtube.com/@VIEWGANAS" target="_blank">Viewganas</a></li>
                 <li><a href="https://youtube.com/@naoesoalface?si=aIvbzj67tMLUa7W2" target="_blank">Não É Só Alface</a></li>
                 <li><a href="https://youtube.com/@veganizai1691?si=uCFkgp3ac7_TAraH" target="_blank">VeganizAí</a></li>
