--- a/onde-comer.html
+++ b/onde-comer.html
@@ -136,7 +136,7 @@
             <ul>
                 <li><a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">Rango Verde</a></li>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
-                <li><a href="https://instagram.com/lifecoxinharia?igshid=MzRlODBiNWFlZA==" target="_blank">Life Coxinharia</a></li> 
+                <li><a href="https://www.instagram.com/lifealimentacaoinclusiva?igsh=MWEzbHBjbzA1cXI4ZA==" target="_blank">Life Alimentação Inclusiva</a></li> 
                 <li><a href="https://www.instagram.com/empadaria_da_vovo_?igsh=NjY2ZzBtejZrbXk0" target="_blank">Empadaria da Vovó</a></li>
                 <li><a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">Dorear</a></li>
                 <li><a href="https://www.instagram.com/amordecafe_?igsh=bnBidTB2MDEyejdt" target="_blank">Amor de Café</a></li>  
