Coloquei metatags para auxiliar o SEO

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media-queries.css">
 
+    <meta name="description" content="Guia vegano de Fortaleza">
+    <meta name="keywords" content="vegano, fortaleza, veganismo, vegetarianismo, dicas">
 </head>
 
 <body onresize="mudouTamanho">
