--- a/confeitarias.html
+++ b/confeitarias.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
+    <meta name="description" content="Guia vegano de Fortaleza">
+    <meta name="keywords" content="vegano, fortaleza, veganismo, vegetarianismo, dicas">
     <style>
         body {
             height: 100vh;
